[metadata]
name = cristalyze
version = 0.0.1
author = Antonio Netto
author_email = 92.netto@gmail.com
description = Criação de tabelas e geração de arquivos JSON
long_description = file: README.md
long_description_content_type = text/markdown
url = not yet
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src