[metadata]
name = crystallize
version = 0.0.2
author = Antonio Netto
author_email = 92.netto@gmail.com
description = Creating tables and storing them in JSON files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/duzisnetto/crystallize
project_urls =
    Bug Tracker = https://github.com/duzisnetto/crystallize/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src